fix spacing html document

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    width: 100%;
+    z width: 100%;
     font-family: raleway, sans-serif;
     background-color: rgba(255, 255, 255, 0.846)
 }
@@ -25,7 +25,6 @@ h5 {
     color: black;
     text-transform: uppercase;
     letter-spacing: 3px;
-
 }
 
 h2 {
@@ -42,14 +41,9 @@ h5 {
     text-align: center;
 }
 
-p {
-    font-size: 20px;
-}
-
 #p-about-us {
     font-size: 25px;
 }
-
 
 #logo {
     text-align: center;
@@ -67,14 +61,18 @@ p {
     padding: 40px 0 40px;
 }
 
-ul,
+ul {
+    list-style-type: none;
+}
+
 .nav-text {
-    padding: 30px;
-    font-size: 30px;
+    font-size: 20px;
     list-style-type: none;
     text-align: center;
-    display: inline;
-
+    display: flex;
+    width: 100%;
+    max-width: 10rem;
+    justify-content: space-around;
 }
 
 .about-us {
@@ -89,6 +87,11 @@ ul,
     overflow: hidden;
 }
 
+.style-for-all {
+    margin: 2em auto;
+    font-size: 20px;
+}
+
 
 a {
     color: white;
@@ -98,12 +101,8 @@ a {
 .socialmedia,
 .button,
 li a:hover {
-    color: rgb(118, 118, 118);
-    padding: 0 30px 0 30px;
-
-
+    color: green;
 }
-
 
 .headline {
     font-size: 40px;
@@ -115,26 +114,26 @@ li a:hover {
 }
 
 /* For text over images */
-
 .opacity {
     background-color: rgba(255, 255, 255, 0.562);
 }
 
-
-
 /* Class options and information section */
-
 .class-options {
     line-height: 40px;
     margin-bottom: 100px;
-    box-shadow: 8px 4px 8px 0 rgba(0, 0, 0, 0.2);
-
+    padding: 2em;
+    width: 100%;
+    max-width: 120rem;
 }
 
 .class-1,
-.class-3 {
+.class-2,
+.class-3,
+.class-4 {
     background-color: aqua;
-
+    box-shadow: 8px 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 2em;
 }
 
 /* Schedule section */
@@ -142,6 +141,7 @@ li a:hover {
     border-style: solid;
     border-width: 3px;
     margin: 20px;
+    margin-bottom: 100px;
     flex-direction: row;
     justify-content: center;
     line-height: 40px;
@@ -152,13 +152,11 @@ li a:hover {
 }
 
 /* Membership option section */
-
 .cards {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-bottom: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 1em 0;
 }
 
 .card1,
@@ -205,62 +203,79 @@ li a:hover {
     border-radius: 5px;
 }
 
-.button {
-    font-family: raleway, sans-serif;
-    font-size: 15px;
-    background-color: black;
-    color: white;
-    text-align: center;
-    align-items: center;
-    height: 30px;
-    display: flex;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
-    margin: auto;
-}
-
-.button:hover {
-    opacity: 0.7;
-}
-
 /* footer */
-
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     background-color: black;
     color: white;
-
+    padding: 1em;
 }
 
 @media screen and (max-width:800px) {
-    .card1, .card2, .card3, .cards {
+
+    .card1,
+    .card2,
+    .card3,
+    .cards {
         flex-direction: column;
         align-items: center;
         width: 100%;
         margin-bottom: 20px;
     }
 
-}
-@media screen and (max-width:800px) {
     .about-us {
-        height:auto;
+        height: auto;
         padding: 0;
     }
-}
 
-@media screen and (max-width:800px) { 
-    .headine { padding:0}
+    .headline {
+        padding: 0;
+    }
 
+    #logo {
+        display: flex;
+        align-items: center;
+        text-align: center;
+        margin: 0;
+    }
+
+    .nav-text {
+        padding: 2em;
     }
 
 
+    #navigation {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        padding: 1em;
+    }
 
-@media screen and (max-width:800px) {
-    #logo, #navigation {margin:auto; padding:0;}
+    .style-for-all {
+        margin: auto;
+        padding: 1em;
+    }
 }
 
+@media screen and (min-width:800px) {
+    .nav-text {
+        padding: 30px;
+        font-size: 20px;
+        display: inline;
+        text-align: center;
+        list-style-type: none;
+    }
+
+    #logo {
+        display: flex;
+        align-content: center;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
